# 06-crm

./: .pre-commit-config.yaml.bak  Cargo.toml  deny.toml  rustfmt.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  meta_data.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: meta_data.rs  mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs  crm_send.yml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: crm_send.rs  mod.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs
protos/crm/: messages.proto  rpc.proto
protos/crm_send/: messages.proto  rpc.proto
protos/meta_data/: messages.proto  rpc.proto
protos/user_stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20251003083956_init.sql  20260315134415_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
