[workspace]
members = ["crm"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14.2", features = ["zstd"] }
# tonic-build = "0.14.2"  # use tonic-prost-build instead
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
