[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
fake = { version = "4.4.0", features = ["derive", "chrono"] }
futures = "0.3.32"
itertools = "0.14.0"
prost = "0.14.1"
prost-build = "0.14.1"
proto-builder-trait = {git = "https://github.com/tr1um7h/proto-builder-trait", branch = "main"}
prost-types = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.2", features = ["zstd"] }
# tonic-build = "0.14.2"  # use tonic-prost-build instead
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
