[package]
name = "crm-send"
version = "0.1.0"
license = "MIT"
edition = "2024"

[features]
default = []
test_utils = ["fake"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
fake = { workspace = true, optional = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.22.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
# tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
user-stat = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"]}
