[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = ["crm/src/pb/*"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
user-stat = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
# prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
# tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
