[package]
name = "user-stat"
version = "0.1.0"
license = "MIT"
edition = "2024"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.9.2"
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
# tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
fake = { version = "4.4.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
