[package]
name = "user-stat"
version = "0.1.0"
license = "MIT"
edition = "2024"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
# tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
fake = { version = "4.4.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
